apps/blog/environments/prod/manifest.yaml
---
# Source: homelab/charts/blog/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-prod
  labels:
    helm.sh/chart: blog-0.2.0
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
---
# Source: homelab/charts/blog/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-prod
  labels:
    helm.sh/chart: blog-0.2.0
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: blog
      app.kubernetes.io/instance: blog
  template:
    metadata:
      labels:
        helm.sh/chart: blog-0.2.0
        app.kubernetes.io/name: blog
        app.kubernetes.io/instance: blog
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: blog-prod
      securityContext:
        {}
      containers:
        - name: blog
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
          image: "ghcr.io/kdwils/blog:1.0.11"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      volumes:
        - emptyDir: {}
          name: config
        - emptyDir: {}
          name: data
---
# Source: homelab/charts/blog/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-prod
  labels:
    helm.sh/chart: blog-0.2.0
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "blog.kyledev.co"
    - "blog.ts.kyledev.co"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: blog-prod
        port: 8080
        weight: 1
---
# Source: homelab/charts/blog/templates/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: blog-prod
  labels:
    helm.sh/chart: blog-0.2.0
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: blog-prod
  extAuth:
    bodyToExtAuth:
      maxRequestBytes: 65536
    grpc:
      backendRefs:
      - group: ""
        kind: Service
        name: homelab-envoy-proxy-bouncer
        namespace: crowdsec
        port: 8080
        weight: 1
